# ngpt-mac

./: README.md  pyproject.toml
ngpt_mac/: model.py  train.py
