[project]
name = "ngpt-mac"
version = "0.1.0"
description = "Mac-compatible implementation of NGPT"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "einops>=0.6.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"